# ltct-scramble-generator

./: Benchmarks.md  CMakeLists.txt  LICENSE.md  Makefile  README.md  cmake_install.cmake  gen.cpp  run-arm.sh  server-example
examples/: benchmark.cpp  example.cpp  server-example.cpp  tests.cpp
include/: cube.h  tracing.h
include/min2phase/: min2phase.h  tools.h
src/: CubieCube.cpp  CubieCube.h  Search.cpp  Search.h  coords.cpp  coords.h  cube.cc  http.cpp  http.h  info.cpp  info.h  main.cc  min2phase.cpp  tests.cpp  tests.h  tools.cpp  tracing.cc
